<resources>
    <string name="app_name">MusicApp</string>
    <string name="group_name">Group 12</string>
    <string name="button_at_your_service">At Your Service</string>
    <string name="drug_name">Enter Medication Name</string>
    <string name="drug_input_error">Enter medication to look up.</string>
    <string name="enter_search_criteria">Enter Search Criteria</string>
    <string name="enter_medication_name">Medication Name:  </string>
    <string name="enter_drug_form">Dosage Form:  </string>
    <string name="enter_brand_generic">Generic/Brand Name:  </string>
    <string name="search_rx">Confirm Search</string>
    <string name="service">At Your Service</string>
    <string name="enter_product_ndc">Product NDC:  </string>
    <string name="enter_active_ingredients">Active Ingredients:  </string>
    <string name="enter_pharm_class_epc">Pharmaceutical Class:  </string>
    <string name="enter_manufacturer_name">Manufacturer:  </string>
    <string name="enter_routes">Routes of Administration:  </string>
    <string name="enter_product_type">Product Type:  </string>
    <string name="search_openfda">Search for Medications in openFDA</string>
    <string name="execute_search">Search openFDA</string>
    <string name="search_error">No results to display. Please retry.</string>
    <string name="Back">Back</string>
    <string name="username">Enter your username To login</string>
    <string name="login">Login</string>
    <string name="info">Group12 : Lingfeng Xia, Weize Sun, Wei Zhang, Yi Hsin Wen</string>
<<<<<<< HEAD
    <string name="sendSticker_send">SEND</string>
    <string name="sendSticker_Check">Check History</string>
    <string name="send_to">Send to:</string>
    <string name="firebase_database">Stick It To Em</string>
    <string name="from_user_string">From User</string>
    <string name="send_time_string">Send Time</string>
    <string name="stickers_string">Stickers</string>
=======
    <string name="username_string">username_string</string>
    <string name="login_string">login_string</string>
    <string name="current_user_string">Current user:</string>
    <string name="choose_sticker_string">Choose sticker:</string>
    <string name="send_to_string">Send to:</string>
    <string name="inbox_string">Inbox:</string>
    <string name="select_receiver_string">Select receiver</string>
    <string name="send_string">Send</string>
    <string name="currently_empty_string">Currently empty</string>
    <string name="sent_indicator_text" />
    <string name="notification_channel_id" />
>>>>>>> 1aa1907922a43f40c6106e91d6ffebaacd8a1376
    <string-array name="brandgenericspinner">
        <item>GENERIC NAME</item>
        <item>BRAND NAME</item>
    </string-array>


    <string-array name="drugformspinner">
        <item>AEROSOL</item>
        <item>CAPSULE</item>
        <item>CHEWABLE</item>
        <item>CREAM</item>
        <item>INHALANT</item>
        <item>INJECTION</item>
        <item>OINTMENT</item>
        <item>LIQUID</item>
        <item>LOTION</item>
        <item>POWDER</item>
        <item>TABLET</item>
    </string-array>
</resources>