<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollViewStickit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fireBaseActivity.FireBaseActivity">

    <LinearLayout
        android:id="@+id/linearLayoutStickit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewLoginLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:labelFor="@id/editTextUsername"
                android:text="@string/username_string"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLoginLabel"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:enabled="false"
                android:onClick="loginClicked"
                android:text="@string/login_string"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/controlsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textViewSendToLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:labelFor="@id/editTextUsername"
                android:text="@string/send_to_string"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCurrentUserLabel" />

            <TextView
                android:id="@+id/textViewCurrentUserLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/current_user_string"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCurrentUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textViewCurrentUserLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinnerSendTo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/select_receiver_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSendToLabel" />

            <TextView
                android:id="@+id/textViewChooseStickerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:labelFor="@id/editTextUsername"
                android:text="@string/choose_sticker_string"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerSendTo" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/chooseStickerFlow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:flow_horizontalBias="0"
                app:flow_horizontalGap="8dp"
                app:flow_horizontalStyle="packed"
                app:flow_verticalGap="8dp"
                app:flow_wrapMode="chain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewChooseStickerLabel"
                tools:layout_height="100dp" />

            <Button
                android:id="@+id/buttonSendSticker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:enabled="false"
                android:onClick="sendClicked"
                android:text="@string/send_string"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseStickerFlow" />

            <TextView
                android:id="@+id/textViewInboxLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:labelFor="@id/editTextUsername"
                android:text="@string/inbox_string"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSendSticker" />

            <TextView
                android:id="@+id/textViewInboxEmptyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:labelFor="@id/editTextUsername"
                android:text="@string/currently_empty_string"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textViewInboxLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewInboxLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
