<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/receivedStickerView"
        android:layout_width="@dimen/image_size_small"
        android:layout_height="@dimen/image_size_small"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/list_margin"
        android:contentDescription="@string/stickers_string"
        android:gravity="center_vertical"
        android:src="@android:drawable/stat_sys_warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fromUserView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="26dp"
        android:layout_toEndOf="@id/receivedStickerView"
        android:gravity="center_vertical"
        android:minWidth="@dimen/min_width"
        android:text="@string/from_user_string"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendTimeView"
        app:layout_constraintStart_toEndOf="@+id/receivedStickerView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sendTimeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/fromUserView"
        android:gravity="center_vertical"
        android:text="@string/send_time_string"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>